fix alignment on google maps in single clinic

--- a/src/assets/css/pages/clinica.css
+++ b/src/assets/css/pages/clinica.css
@@ -77,7 +77,7 @@
   margin-right: 8px;
 }
 #sess4_single_clinic {
-  @apply container mx-auto px-8 py-8;
+  @apply container mx-auto px-8 py-8 flex justify-center items-center;
 }
 #sess4_single_clinic iframe {
   @apply w-[85vw];
